Add MCP worker script and enhance tool call handling
- Introduced a new script entry point for the MCP worker in `pyproject.toml`.
- Enhanced the `Runtime` class to merge blocked tool call results into the payload, ensuring correct evidence capture and alignment of results.
- Updated `make_tool_calls_handler` to maintain the original order of tool calls for evidence and handle blocked entries more effectively.
- Improved memory rehydration logic to include memory notes as synthetic messages, enhancing context visibility.
- Updated tests to validate the new memory note handling and ensure correct behavior in rehydration scenarios.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,13 +33,15 @@ classifiers = [
   "Programming Language :: Python :: 3.13",
 ]
 
+[project.scripts]
+abstractruntime-mcp-worker = "abstractruntime.integrations.abstractcore.mcp_worker:main"
+
 [project.urls]
 "AbstractCore (website)" = "https://www.abstractcore.ai/"
 "AbstractCore (GitHub)" = "https://github.com/lpalbou/abstractruntime"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/abstractruntime"]
-
 
 
 
