Enhance Runtime and ActiveContextPolicy with new filtering capabilities
- Updated the `Runtime` class to support multi-valued tags and introduced `tags_mode` for AND/OR filtering across tag keys.
- Enhanced the handling of authors and locations in the `Runtime` class, allowing for more flexible querying based on these attributes.
- Modified the `ActiveContextPolicy` to incorporate the new filtering options, improving the precision of context retrieval based on tags, authors, and locations.
- Updated related functions to ensure compatibility with the new filtering logic and maintain existing functionality.
- Added tests to validate the new filtering capabilities and ensure correct behavior across various scenarios.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,17 @@ classifiers = [
   "Programming Language :: Python :: 3.13",
 ]
 
+[project.optional-dependencies]
+# Enables `abstractruntime.integrations.abstractcore.*` imports.
+abstractcore = [
+  "abstractcore>=2.6.8",
+]
+
+# Enables `abstractruntime-mcp-worker` with the default toolsets (includes bs4/lxml).
+mcp-worker = [
+  "abstractcore[tools]>=2.6.8",
+]
+
 [project.scripts]
 abstractruntime-mcp-worker = "abstractruntime.integrations.abstractcore.mcp_worker:main"
 
@@ -42,6 +53,5 @@ abstractruntime-mcp-worker = "abstractruntime.integrations.abstractcore.mcp_work
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/abstractruntime"]
-
 
 
